--- a/notebooks/02_Google_OR-Tools_Constraint_Programming/00_Makespan and Flowtime.ipynb
+++ b/notebooks/02_Google_OR-Tools_Constraint_Programming/00_Makespan and Flowtime.ipynb
@@ -44,7 +44,11 @@
    "cell_type": "code",
    "source": [
     "# Hard termination condition for schedulers\n",
-    "max_time = 60*10    # 10 min\n"
+    "max_time = 60*10    # 10 min\n",
+    "\n",
+    "# File paths\n",
+    "examples_data_path = get_path(\"data\", \"examples\")\n",
+    "basic_data_path = get_path(\"data\", \"basic\")\n"
    ],
    "id": "7fa7b78a41423e39",
    "outputs": [],
@@ -60,8 +64,6 @@
    "cell_type": "code",
    "source": [
     "# Load file\n",
-    "basic_data_path = get_path(\"data\", \"basic\")\n",
-    "examples_data_path = get_path(\"data\", \"examples\")\n",
     "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
     "df_routings"
    ],
