--- a/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
@@ -16,9 +16,10 @@
     }
    },
    "source": [
-    "# Datenzugriff\n",
-    "from configs.path_manager import get_path\n",
     "import pandas as pd\n",
+    "\n",
+    "# Data access\n",
+    "from configs.path_manager import get_path\n",
     "\n",
     "# Utils\n",
     "from src.utils.initialization import jobs_jssp_init as init, arrivals_init as term"
