--- a/notebooks/00_Data Preparation and Preprocessing/03_Deadlines_by_FCFS_Simulation.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/03_Deadlines_by_FCFS_Simulation.ipynb
@@ -1,15 +1,10 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-07-27T19:44:41.528510Z",
-     "start_time": "2025-07-27T19:44:41.021977Z"
-    }
-   },
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +16,7 @@
     "from src.utils.initialization import jobs_jssp_init as init\n",
     "\n",
     "from src.utils.initialization.gen_deadlines import get_temporary_df_times_from_schedule, ensure_reasonable_deadlines\n",
-    "from src.utils.analysis_basics.plotfigures import empirical_flow_budget_distributions\n",
+    "from src.utils.analysis_basics.check_gen_deadlines import plotfig_empirical_flow_budget_distributions\n",
     "from src.utils.initialization.gen_deadlines import add_groupwise_lognormal_deadlines_by_group_mean\n",
     "\n",
     "# Data access\n",
@@ -33,175 +28,30 @@
     "pd.set_option('display.min_rows', 12)\n",
     "pd.set_option('display.max_rows', 16)\n"
    ],
-   "outputs": [],
-   "execution_count": 1
+   "id": "3d4164fcc4bd2082"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-27T19:44:43.025518Z",
-     "start_time": "2025-07-27T19:44:43.015634Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "# Data access\n",
+    "# Data paths\n",
     "basic_data_path = get_path(\"data\", \"basic\")\n",
-    "examples_data_path = get_path(\"data\", \"examples\")\n",
+    "examples_data_path = get_path(\"data\", \"examples\")"
+   ],
+   "id": "1c94b4b3cd75cf73"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
     "df_routings"
    ],
-   "id": "f023399ad24c72e7",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "    Routing_ID  Operation Machine  Processing Time\n",
-       "0            0          0     M00               29\n",
-       "1            0          1     M01               78\n",
-       "2            0          2     M02                9\n",
-       "3            0          3     M03               36\n",
-       "4            0          4     M04               49\n",
-       "5            0          5     M05               11\n",
-       "..         ...        ...     ...              ...\n",
-       "94           9          4     M08               64\n",
-       "95           9          5     M09               76\n",
-       "96           9          6     M05               47\n",
-       "97           9          7     M03               52\n",
-       "98           9          8     M04               90\n",
-       "99           9          9     M07               45\n",
-       "\n",
-       "[100 rows x 4 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Routing_ID</th>\n",
-       "      <th>Operation</th>\n",
-       "      <th>Machine</th>\n",
-       "      <th>Processing Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>M00</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>M01</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>M02</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>M03</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>M04</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>M05</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>M08</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>9</td>\n",
-       "      <td>5</td>\n",
-       "      <td>M09</td>\n",
-       "      <td>76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>M05</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
-       "      <td>M03</td>\n",
-       "      <td>52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>9</td>\n",
-       "      <td>8</td>\n",
-       "      <td>M04</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>M07</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 4 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   "id": "75f056f93ff0114b"
   },
   {
    "metadata": {
@@ -1453,7 +1303,7 @@
    },
    "cell_type": "code",
    "source": [
-    "empirical_flow_budget_distributions(df_jobs_times_temp, deadline_column=\"End\")\n",
+    "plotfig_empirical_flow_budget_distributions(df_jobs_times_temp, deadline_column=\"End\")\n",
     "plt.show()"
    ],
    "id": "639a36ee08f92d18",
@@ -1713,7 +1563,7 @@
    },
    "cell_type": "code",
    "source": [
-    "empirical_flow_budget_distributions(df_jobs_times)\n",
+    "plotfig_empirical_flow_budget_distributions(df_jobs_times)\n",
     "plt.show()"
    ],
    "id": "df08c6bea504bb45",
