--- a/notebooks/00_Data Preparation and Preprocessing/00_Raw Data Preparation.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/00_Raw Data Preparation.ipynb
@@ -12,9 +12,8 @@
    "cell_type": "code",
    "id": "f51ef995b478e9c0",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.591866Z",
-     "start_time": "2025-07-25T15:51:08.589605Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -27,7 +26,7 @@
     "from configs.path_manager import get_path"
    ],
    "outputs": [],
-   "execution_count": 35
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -40,7 +39,7 @@
    "id": "dd5bfcd2-c77c-45c2-a9a5-51e6ab68dd5b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.599807Z",
+     "end_time": "2025-07-28T22:50:11.437441200Z",
      "start_time": "2025-07-25T15:51:08.597991Z"
     }
    },
@@ -55,7 +54,7 @@
    "id": "9ddc890411927d0e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.616358Z",
+     "end_time": "2025-07-28T22:50:11.438438100Z",
      "start_time": "2025-07-25T15:51:08.613578Z"
     }
    },
@@ -191,7 +190,7 @@
    "id": "2e1c7bbc5429247d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.626899Z",
+     "end_time": "2025-07-28T22:50:11.438438100Z",
      "start_time": "2025-07-25T15:51:08.622776Z"
     }
    },
@@ -277,7 +276,7 @@
    "id": "bae567478d378ced",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.637432Z",
+     "end_time": "2025-07-28T22:50:11.439458700Z",
      "start_time": "2025-07-25T15:51:08.634254Z"
     }
    },
@@ -311,7 +310,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.664467Z",
+     "end_time": "2025-07-28T22:50:11.439458700Z",
      "start_time": "2025-07-25T15:51:08.656677Z"
     }
    },
@@ -355,7 +354,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.707990Z",
+     "end_time": "2025-07-28T22:50:11.440438100Z",
      "start_time": "2025-07-25T15:51:08.672102Z"
     }
    },
@@ -384,7 +383,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.720435Z",
+     "end_time": "2025-07-28T22:50:11.440438100Z",
      "start_time": "2025-07-25T15:51:08.714507Z"
     }
    },
@@ -535,11 +534,11 @@
    "id": "3f659236-5633-48fc-be7d-41ef2ad4f62a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:51:08.747012Z",
+     "end_time": "2025-07-28T22:50:11.441444300Z",
      "start_time": "2025-07-25T15:51:08.744368Z"
     }
    },
-   "source": "df_routings_ft10.to_csv(basic_data_path / \"routings_ft10.csv\", index = False)",
+   "source": "df_routings_ft10.to_csv(basic_data_path / \"ft10_routings.csv\", index = False)",
    "outputs": [],
    "execution_count": 43
   }
