--- a/notebooks/00_Data Preparation and Preprocessing/01_Data Exploration with FCFS.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/01_Data Exploration with FCFS.ipynb
@@ -19,8 +19,8 @@
    "id": "1eda0ef8-5183-467a-96bd-bce98831664d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:00.309779Z",
-     "start_time": "2025-07-27T18:29:00.306850Z"
+     "end_time": "2025-07-28T23:05:34.323474Z",
+     "start_time": "2025-07-28T23:05:34.320629Z"
     }
    },
    "source": [
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:00.738844Z",
-     "start_time": "2025-07-27T18:29:00.312340Z"
+     "end_time": "2025-07-28T23:05:34.754604Z",
+     "start_time": "2025-07-28T23:05:34.325683Z"
     }
    },
    "cell_type": "code",
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:00.827592Z",
-     "start_time": "2025-07-27T18:29:00.813066Z"
+     "end_time": "2025-07-28T23:05:34.850262Z",
+     "start_time": "2025-07-28T23:05:34.836578Z"
     }
    },
    "cell_type": "code",
@@ -83,8 +83,8 @@
     "    jobshop_instances = json.load(f)\n",
     "\n",
     "instance =  jobshop_instances[\"instance ft10\"]\n",
-    "df_instance = convert.routing_dict_to_df(instance)\n",
-    "df_instance"
+    "df_routings = convert.routing_dict_to_df(instance)\n",
+    "df_routings"
    ],
    "id": "828a386cefa58a4a",
    "outputs": [
@@ -227,12 +227,12 @@
    "id": "a2b80695-3f05-43b1-b376-5776d653fde7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:00.867549Z",
-     "start_time": "2025-07-27T18:29:00.859536Z"
+     "end_time": "2025-07-28T23:05:34.886154Z",
+     "start_time": "2025-07-28T23:05:34.874130Z"
     }
    },
    "source": [
-    "df_jssp = init.generate_jobs_from_routings(df_instance, shuffle = False)\n",
+    "df_jssp = init.generate_jssp_from_routings(df_routings, shuffle = False)\n",
     "df_jssp"
    ],
    "outputs": [
@@ -421,8 +421,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:00.923152Z",
-     "start_time": "2025-07-27T18:29:00.915207Z"
+     "end_time": "2025-07-28T23:05:34.929116Z",
+     "start_time": "2025-07-28T23:05:34.920960Z"
     }
    },
    "cell_type": "code",
@@ -547,8 +547,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:01.033147Z",
-     "start_time": "2025-07-27T18:29:01.027802Z"
+     "end_time": "2025-07-28T23:05:35.011661Z",
+     "start_time": "2025-07-28T23:05:35.005919Z"
     }
    },
    "cell_type": "code",
@@ -684,8 +684,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:01.105494Z",
-     "start_time": "2025-07-27T18:29:01.099194Z"
+     "end_time": "2025-07-28T23:05:35.071099Z",
+     "start_time": "2025-07-28T23:05:35.065382Z"
     }
    },
    "cell_type": "code",
@@ -856,8 +856,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:01.390787Z",
-     "start_time": "2025-07-27T18:29:01.206935Z"
+     "end_time": "2025-07-28T23:05:35.310058Z",
+     "start_time": "2025-07-28T23:05:35.126878Z"
     }
    },
    "cell_type": "code",
@@ -880,12 +880,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:01.584340Z",
-     "start_time": "2025-07-27T18:29:01.409669Z"
+     "end_time": "2025-07-28T23:05:35.496895Z",
+     "start_time": "2025-07-28T23:05:35.325763Z"
     }
    },
    "cell_type": "code",
-   "source": "gantt.get_plot(df_schedule, perspective=\"Machine\")",
+   "source": [
+    "gantt.get_plot(df_schedule, perspective=\"Machine\")\n",
+    "check.check_core_schedule_constraints(df_schedule)"
+   ],
    "id": "2015a34513b029f",
    "outputs": [
     {
@@ -897,32 +900,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-27T18:29:01.610Z",
-     "start_time": "2025-07-27T18:29:01.596235Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "check.is_machine_conflict_free(df_schedule)\n",
-    "check.is_operation_sequence_correct(df_schedule)\n",
-    "check.is_job_timing_correct(df_schedule)"
-   ],
-   "id": "a72d5d1001b88c71",
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ Keine Maschinenkonflikte gefunden\n",
-      "+ Alle Gruppen wurden in korrekter Operationsreihenfolge ausgeführt.\n",
-      "+ Alle technologischen Abhängigkeiten wurden eingehalten.\n"
+      "+ No machine conflicts found.\n",
+      "+ All job operations are scheduled in non-overlapping, correct sequence.\n"
      ]
     },
     {
@@ -931,12 +915,12 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   }
  ],
  "metadata": {
