--- a/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
@@ -11,8 +11,8 @@
    "id": "e2e3a8be-dd30-4799-a3f3-3a3f46863370",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.371941Z",
-     "start_time": "2025-07-27T21:02:37.185830Z"
+     "end_time": "2025-07-28T23:06:12.127898Z",
+     "start_time": "2025-07-28T23:06:11.954238Z"
     }
    },
    "source": [
@@ -32,14 +32,14 @@
    "id": "9d982257-9f3a-4c4a-adb6-9b4b25362d3c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.387584Z",
-     "start_time": "2025-07-27T21:02:37.376423Z"
+     "end_time": "2025-07-28T23:06:12.141868Z",
+     "start_time": "2025-07-28T23:06:12.132443Z"
     }
    },
    "source": [
     "# Load file\n",
     "basic_data_path = get_path(\"data\", \"basic\")\n",
-    "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
+    "df_routings = pd.read_csv(basic_data_path / \"ft10_routings.csv\")\n",
     "df_routings"
    ],
    "outputs": [
@@ -200,8 +200,8 @@
    "id": "a4cb86b8-33d2-4801-ad73-026104f7a320",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.506784Z",
-     "start_time": "2025-07-27T21:02:37.500779Z"
+     "end_time": "2025-07-28T23:06:12.236473Z",
+     "start_time": "2025-07-28T23:06:12.227183Z"
     }
    },
    "source": [
@@ -250,8 +250,8 @@
    "id": "35ba0bb2-5bdc-45b5-9a1c-4d6fd4cf3414",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.536050Z",
-     "start_time": "2025-07-27T21:02:37.531173Z"
+     "end_time": "2025-07-28T23:06:12.267176Z",
+     "start_time": "2025-07-28T23:06:12.263357Z"
     }
    },
    "source": [
@@ -283,8 +283,8 @@
    "id": "b808ec0f-c8be-4ab4-8294-2f5227669489",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.586393Z",
-     "start_time": "2025-07-27T21:02:37.582959Z"
+     "end_time": "2025-07-28T23:06:12.313372Z",
+     "start_time": "2025-07-28T23:06:12.309771Z"
     }
    },
    "source": [
@@ -322,8 +322,8 @@
    "id": "50101568-a2ec-4ac4-bd99-66d50ac98fa1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.685911Z",
-     "start_time": "2025-07-27T21:02:37.680768Z"
+     "end_time": "2025-07-28T23:06:12.337739Z",
+     "start_time": "2025-07-28T23:06:12.333441Z"
     }
    },
    "source": [
@@ -364,12 +364,12 @@
    "id": "06a10e09-a403-4e15-ae75-01d9edc703ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-27T21:02:37.773358Z",
-     "start_time": "2025-07-27T21:02:37.762979Z"
+     "end_time": "2025-07-28T23:06:12.371605Z",
+     "start_time": "2025-07-28T23:06:12.356635Z"
     }
    },
    "source": [
-    "df_jssp = init.generate_jobs_from_routings(df_routings, shuffle = True)\n",
+    "df_jssp = init.generate_jssp_from_routings(df_routings, shuffle = True)\n",
     "df_jobs = df_jssp[[\"Job\", \"Routing_ID\"]].drop_duplicates()\n",
     "\n",
     "arrivals = term.generate_arrivals_from_mean_interarrival_time(10, t_a)\n",
