--- a/notebooks/00_Data Preparation and Preprocessing/03_Deadlines_by_FCFS_Simulation.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/03_Deadlines_by_FCFS_Simulation.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
+    "df_routings = pd.read_csv(basic_data_path / \"ft10_routings.csv\")\n",
     "df_routings"
    ],
    "id": "75f056f93ff0114b"
@@ -1807,11 +1807,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "df_jssp.to_csv(basic_data_path / f\"jssp_final.csv\", index = False)\n",
-    "\n",
-    "df_jobs_times_final.to_csv(basic_data_path / f\"jobs_times_final.csv\", index = False)\n"
-   ],
+   "source": "df_jobs_times_final.to_csv(basic_data_path / f\"jobs_times_final.csv\", index = False)",
    "id": "7d01027754f0db3",
    "outputs": [],
    "execution_count": 16
