--- a/notebooks/01_COIN_OR_Linear_Programming/00_Makespan.ipynb
+++ b/notebooks/01_COIN_OR_Linear_Programming/00_Makespan.ipynb
@@ -19,7 +19,6 @@
     "from src.utils.rolling_process.rolling_filter import *\n",
     "\n",
     "from src.utils.initialization.arrivals_init import calculate_mean_interarrival_time\n",
-    "# from src.utils.initialization.arrivals_init import generate_arrivals_from_mean_interarrival_time\n",
     "\n",
     "# Solver\n",
     "from src.solvers.converter import get_schedule_dframe, get_earliest_start_dict, get_job_ops_dict\n",
@@ -65,7 +64,7 @@
    },
    "source": [
     "# Load file\n",
-    "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
+    "df_routings = pd.read_csv(basic_data_path / \"ft10_routings.csv\")\n",
     "df_routings"
    ],
    "outputs": [
