--- a/notebooks/02_Google_OR-Tools_Constraint_Programming/00_Makespan and Flowtime.ipynb
+++ b/notebooks/02_Google_OR-Tools_Constraint_Programming/00_Makespan and Flowtime.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "code",
    "source": [
     "# Load file\n",
-    "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
+    "df_routings = pd.read_csv(basic_data_path / \"ft10_routings.csv\")\n",
     "df_routings"
    ],
    "id": "a0491c9818f4e3b0",
@@ -238,7 +238,7 @@
     }
    },
    "source": [
-    "df_jssp = init.generate_jobs_from_routings(df_routings, shuffle = False)\n",
+    "df_jssp = init.generate_jssp_from_routings(df_routings, shuffle = False)\n",
     "df_jssp"
    ],
    "outputs": [
