--- a/notebooks/00_Data Preparation and Preprocessing/00_Raw Data Preparation.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/00_Raw Data Preparation.ipynb
@@ -12,8 +12,9 @@
    "cell_type": "code",
    "id": "f51ef995b478e9c0",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-07-29T05:14:56.723485Z",
+     "start_time": "2025-07-29T05:14:56.540109Z"
     }
    },
    "source": [
@@ -26,7 +27,7 @@
     "from configs.path_manager import get_path"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -39,23 +40,23 @@
    "id": "dd5bfcd2-c77c-45c2-a9a5-51e6ab68dd5b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.437441200Z",
-     "start_time": "2025-07-25T15:51:08.597991Z"
+     "end_time": "2025-07-29T05:14:56.729421Z",
+     "start_time": "2025-07-29T05:14:56.727642Z"
     }
    },
    "source": [
     "basic_data_path = get_path(\"data\", \"basic\")"
    ],
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "9ddc890411927d0e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.438438100Z",
-     "start_time": "2025-07-25T15:51:08.613578Z"
+     "end_time": "2025-07-29T05:14:56.811442Z",
+     "start_time": "2025-07-29T05:14:56.806469Z"
     }
    },
    "source": [
@@ -177,7 +178,7 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -190,8 +191,8 @@
    "id": "2e1c7bbc5429247d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.438438100Z",
-     "start_time": "2025-07-25T15:51:08.622776Z"
+     "end_time": "2025-07-29T05:14:56.820327Z",
+     "start_time": "2025-07-29T05:14:56.816369Z"
     }
    },
    "source": [
@@ -263,7 +264,7 @@
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -276,8 +277,8 @@
    "id": "bae567478d378ced",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.439458700Z",
-     "start_time": "2025-07-25T15:51:08.634254Z"
+     "end_time": "2025-07-29T05:14:56.849638Z",
+     "start_time": "2025-07-29T05:14:56.846150Z"
     }
    },
    "source": [
@@ -305,13 +306,13 @@
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.439458700Z",
-     "start_time": "2025-07-25T15:51:08.656677Z"
+     "end_time": "2025-07-29T05:14:56.871263Z",
+     "start_time": "2025-07-29T05:14:56.864365Z"
     }
    },
    "cell_type": "code",
@@ -343,7 +344,7 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -354,8 +355,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.440438100Z",
-     "start_time": "2025-07-25T15:51:08.672102Z"
+     "end_time": "2025-07-29T05:14:56.930973Z",
+     "start_time": "2025-07-29T05:14:56.890529Z"
     }
    },
    "cell_type": "code",
@@ -366,7 +367,7 @@
    ],
    "id": "c812b11e-319a-4805-9d43-8e4fa63ab214",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -383,8 +384,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.440438100Z",
-     "start_time": "2025-07-25T15:51:08.714507Z"
+     "end_time": "2025-07-29T05:14:57.006102Z",
+     "start_time": "2025-07-29T05:14:56.997110Z"
     }
    },
    "cell_type": "code",
@@ -522,25 +523,25 @@
        "</div>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 42
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "3f659236-5633-48fc-be7d-41ef2ad4f62a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T22:50:11.441444300Z",
-     "start_time": "2025-07-25T15:51:08.744368Z"
+     "end_time": "2025-07-29T05:14:57.037434Z",
+     "start_time": "2025-07-29T05:14:57.032467Z"
     }
    },
    "source": "df_routings_ft10.to_csv(basic_data_path / \"ft10_routings.csv\", index = False)",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 9
   }
  ],
  "metadata": {
