--- a/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
@@ -11,8 +11,8 @@
    "id": "e2e3a8be-dd30-4799-a3f3-3a3f46863370",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.127898Z",
-     "start_time": "2025-07-28T23:06:11.954238Z"
+     "end_time": "2025-07-29T05:15:11.082136Z",
+     "start_time": "2025-07-29T05:15:10.887257Z"
     }
    },
    "source": [
@@ -32,8 +32,8 @@
    "id": "9d982257-9f3a-4c4a-adb6-9b4b25362d3c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.141868Z",
-     "start_time": "2025-07-28T23:06:12.132443Z"
+     "end_time": "2025-07-29T05:15:11.095910Z",
+     "start_time": "2025-07-29T05:15:11.086141Z"
     }
    },
    "source": [
@@ -200,8 +200,8 @@
    "id": "a4cb86b8-33d2-4801-ad73-026104f7a320",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.236473Z",
-     "start_time": "2025-07-28T23:06:12.227183Z"
+     "end_time": "2025-07-29T05:15:11.193879Z",
+     "start_time": "2025-07-29T05:15:11.190348Z"
     }
    },
    "source": [
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maschinenbelastung (Gesamtverarbeitungszeit):\n",
+      "Machine load (total processing time):\n",
       "  M00: 493\n",
       "  M01: 548\n",
       "  M02: 556\n",
@@ -250,8 +250,8 @@
    "id": "35ba0bb2-5bdc-45b5-9a1c-4d6fd4cf3414",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.267176Z",
-     "start_time": "2025-07-28T23:06:12.263357Z"
+     "end_time": "2025-07-29T05:15:11.237015Z",
+     "start_time": "2025-07-29T05:15:11.230861Z"
     }
    },
    "source": [
@@ -283,8 +283,8 @@
    "id": "b808ec0f-c8be-4ab4-8294-2f5227669489",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.313372Z",
-     "start_time": "2025-07-28T23:06:12.309771Z"
+     "end_time": "2025-07-29T05:15:11.271217Z",
+     "start_time": "2025-07-29T05:15:11.267502Z"
     }
    },
    "source": [
@@ -322,8 +322,8 @@
    "id": "50101568-a2ec-4ac4-bd99-66d50ac98fa1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.337739Z",
-     "start_time": "2025-07-28T23:06:12.333441Z"
+     "end_time": "2025-07-29T05:15:11.372418Z",
+     "start_time": "2025-07-29T05:15:11.368101Z"
     }
    },
    "source": [
@@ -364,8 +364,8 @@
    "id": "06a10e09-a403-4e15-ae75-01d9edc703ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-28T23:06:12.371605Z",
-     "start_time": "2025-07-28T23:06:12.356635Z"
+     "end_time": "2025-07-29T05:15:11.480945Z",
+     "start_time": "2025-07-29T05:15:11.470928Z"
     }
    },
    "source": [
@@ -382,16 +382,16 @@
      "data": {
       "text/plain": [
        "         Job  Routing_ID  Arrival\n",
-       "0   J25-0000           8       11\n",
-       "10  J25-0001           6       96\n",
+       "0   J25-0000           8        0\n",
+       "10  J25-0001           6       50\n",
        "20  J25-0002           0      118\n",
-       "30  J25-0003           2      160\n",
-       "40  J25-0004           3      197\n",
-       "50  J25-0005           1      263\n",
-       "60  J25-0006           9      324\n",
-       "70  J25-0007           5      341\n",
-       "80  J25-0008           4      356\n",
-       "90  J25-0009           7      441"
+       "30  J25-0003           2      164\n",
+       "40  J25-0004           3      207\n",
+       "50  J25-0005           1      418\n",
+       "60  J25-0006           9      711\n",
+       "70  J25-0007           5      846\n",
+       "80  J25-0008           4      909\n",
+       "90  J25-0009           7      925"
       ],
       "text/html": [
        "<div>\n",
@@ -422,13 +422,13 @@
        "      <th>0</th>\n",
        "      <td>J25-0000</td>\n",
        "      <td>8</td>\n",
-       "      <td>11</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>J25-0001</td>\n",
        "      <td>6</td>\n",
-       "      <td>96</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -440,43 +440,43 @@
        "      <th>30</th>\n",
        "      <td>J25-0003</td>\n",
        "      <td>2</td>\n",
-       "      <td>160</td>\n",
+       "      <td>164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>J25-0004</td>\n",
        "      <td>3</td>\n",
-       "      <td>197</td>\n",
+       "      <td>207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
        "      <td>J25-0005</td>\n",
        "      <td>1</td>\n",
-       "      <td>263</td>\n",
+       "      <td>418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60</th>\n",
        "      <td>J25-0006</td>\n",
        "      <td>9</td>\n",
-       "      <td>324</td>\n",
+       "      <td>711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
        "      <td>J25-0007</td>\n",
        "      <td>5</td>\n",
-       "      <td>341</td>\n",
+       "      <td>846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80</th>\n",
        "      <td>J25-0008</td>\n",
        "      <td>4</td>\n",
-       "      <td>356</td>\n",
+       "      <td>909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90</th>\n",
        "      <td>J25-0009</td>\n",
        "      <td>7</td>\n",
-       "      <td>441</td>\n",
+       "      <td>925</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
